fix: themer click align

--- a/client/temp-it/src/app/components/side-bar/side-bar.component.scss
+++ b/client/temp-it/src/app/components/side-bar/side-bar.component.scss
@@ -58,7 +58,7 @@ ion-menu.md ion-item.selected ion-icon {
 }
 
 ion-menu.md ion-item ion-icon {
-  color: #616e7e;
+  color: var(--ion-color-icon-grey);
 }
 
 ion-menu.md ion-item ion-label {
@@ -90,7 +90,7 @@ ion-menu.ios ion-item.selected ion-icon {
 
 ion-menu.ios ion-item ion-icon {
   font-size: 24px;
-  color: #73849a;
+  color: var(--ion-color-icon-grey);
 }
 
 ion-menu.ios ion-list#labels-list ion-list-header {
@@ -127,19 +127,10 @@ ion-item.selected {
   height: 48px;
 }
 
-.radio-icon ion-radio {
-  margin: 0;
-  padding: 0;
-}
-
-ion-icon.selected {
-  color: var(--ion-color-primary);
-  transition: all 0.3s ease-in-out;
-}
-
 ion-radio {
-  width: 0 !important;
-  height: 0 !important;
+  position: absolute;
+  top: 15px;
+  z-index: 1001;
   --color:transparent;
   --color-checked: transparent;
 }
@@ -149,9 +140,22 @@ ion-radio {
   width: 92%;
   height: 56px;
   display: flex;
-  flex-direction: row;
   justify-content: space-between;
   align-items: center;
+
+  .overlap-positioner{
+    position: relative;
+  }
+
+  ion-icon.selected {
+    color: var(--ion-color-primary);
+    transition: color 0.3s ease-in-out;
+  }
+
+  ion-icon {
+    color: var(--ion-color-icon-grey);
+    transition: color 0.3s ease-in-out;
+  }
 }
 
 .setting-lable{
